--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,24 @@
+body {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(255, 255, 255);
+}
+
 div {
   background-color: rgb(133, 146, 121);
   border: 20px solid rgb(93, 106, 80);
   padding: 20px;
+  max-width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 5px 5px 20px #acacac;
 }
 
 h1 {
+  font-size: 2em;
   text-align: center;
+}
+
+section {
+  font-size: 1.3em;
+  font-weight: bold;
 }
